[gd_scene load_steps=5 format=2]

[ext_resource path="res://constructibles/missile.gd" type="Script" id=1]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.1
bottom_radius = 0.3
height = 2.5

[sub_resource type="PrismMesh" id=2]
size = Vector3( 0.2, 0.5, 1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 1, 1, 1 )

[node name="Missile" type="Spatial"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
script = ExtResource( 1 )

[node name="low_range_mesh" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 1 )

[node name="mid_range_mesh" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 1 )

[node name="long_range_mesh" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="long_range_mesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.03545, 0 )
mesh = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="long_range_mesh"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -1.03545, 0 )
mesh = SubResource( 2 )

[node name="construction_mesh" type="MeshInstance" parent="."]
mesh = SubResource( 3 )
